Bug 661962: Remove mostly-unused variable 'rv' from nsINIParser::Init (moving it inside the #ifdef block where it's used). r=bsmedberg